--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +10,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Email Signature</title>
 </head>
+
 <body>
-    <div class="container email-wrapper
-    ">
-        <div class="links">
-            <ul class="flex">
-                <li><a href="#"><img src="fb.png" alt="facebook-icon"></a></li>
-                <li><a href="#"><img src="linkedIn.png" alt="LinkedIn-icon"></a></li>
-                <li><a href="#"><img src="insta.png" alt="instagram-icon"></a></li>
-                <li><a href="#"><img src="twitter.png" alt="twitter-icon"></a></li>
+    <div style="
+    width: 1512px;
+    height: 455.63px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: #FAA51D;
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/scanpal-f74da.appspot.com/o/gallery%2FEmail-Sig.png?alt=media&token=cd25bdf4-abd1-4eee-b82d-e28312700513');
+    position: relative;">
+        <div style="position: absolute;bottom: 0px;left: 30px;">
+            <ul style="display: flex;gap: 10px;list-style: none;">
+                <li><a href="https://www.facebook.com/adanianlabsafrica"><img src="https://firebasestorage.googleapis.com/v0/b/scanpal-f74da.appspot.com/o/gallery%2Ffb.png?alt=media&token=cd971513-4e10-43b2-b156-c03285d9cd06" alt="facebook-icon"></a></li>
+                <li><a href="https://www.linkedin.com/company/adanianlabs/"><img src="https://firebasestorage.googleapis.com/v0/b/scanpal-f74da.appspot.com/o/gallery%2FlinkedIn.png?alt=media&token=e906bd74-a053-42b3-9608-9a41a6b0fd18" alt="LinkedIn-icon"></a></li>
+                <li><a href="https://www.instagram.com/adanianlabs/"><img src="https://firebasestorage.googleapis.com/v0/b/scanpal-f74da.appspot.com/o/gallery%2Finsta.png?alt=media&token=81bda0fd-7b6a-425c-80e0-b780aa9ddff7" alt="instagram-icon"></a></li>
+                <li><a href="https://twitter.com/Adanianlabs"><img src="https://firebasestorage.googleapis.com/v0/b/scanpal-f74da.appspot.com/o/gallery%2Ftwitter.png?alt=media&token=1a37bbf1-e3ec-4743-93c2-f052d6a2aee6" alt="twitter-icon"></a></li>
             </ul>
         </div>
     </div>
 </body>
+
 </html>
