Add Columns to signature container

--- a/signature.html
+++ b/signature.html
@@ -10,18 +10,31 @@
     <title>Email Signature</title>
 </head>
 <body>
-    <div class="container email-wrapper">
-        <div>
-            <img src="adrianlogo.png" alt="logo">
+    <div class="container email-wrapper flex">
+        <div class="flex flex-column border">
+            <div>
+                <img src="adrianlogo.png" alt="logo">
+                <h3 class="title">Hello, I’m Irene Kiwia</h3>
+                <p class="text">Co-Founder | CGO Adanian Labs</p>
+            </div>
+            <div class="links border">
+                <ul class="flex">
+                    <li><a href="#"><img src="fb.png" alt="facebook-icon"></a></li>
+                    <li><a href="#"><img src="linkedIn.png" alt="LinkedIn-icon"></a></li>
+                    <li><a href="#"><img src="insta.png" alt="instagram-icon"></a></li>
+                    <li><a href="#"><img src="twitter.png" alt="twitter-icon"></a></li>
+                </ul>
+            </div>
         </div>
-        <div></div>
-        <div class="links">
-            <ul class="flex">
-                <li><a href="#"><img src="fb.png" alt="facebook-icon"></a></li>
-                <li><a href="#"><img src="linkedIn.png" alt="LinkedIn-icon"></a></li>
-                <li><a href="#"><img src="insta.png" alt="instagram-icon"></a></li>
-                <li><a href="#"><img src="twitter.png" alt="twitter-icon"></a></li>
-            </ul>
+        <div>
+            <img src="userimage.png" alt="user image">
+            <img src="scan.png" alt="Scan me to save my contact">
+        </div>
+        <div>
+            <div>
+                <p>+25 56 58 87 0113</p>
+                <p>+27 60 655 7255</p>
+            </div>
         </div>
     </div>
 </body>
